--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 languaje: python
-#python:
-#        - "3.7"
-#cache: pip
-#install:
-#        - pip install -r requirements.txt
-#script:
-#        - python test.py
+python:
+        - "3.7"
+cache: pip
+
+script: pytest
+
