--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ languaje: python
 python:
         - "3.7"
 cache: pip
-
+install:
+        - python3 -m install python-logilab-common
 script: pytest
 
