--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "REST API to handle holidays around the world",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon ./app/app.js",
-    "start": "node ./app/app.js",
-    "test-init": "./node_modules/jasmine/bin/jasmine.js init",
-    "test": "./node_modules/jasmine/bin/jasmin.js"
+    "start": "SET NODE_ENV=dev && node ./app/app/js",
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -24,13 +22,17 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^1.31.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
+    "morgan": "^1.7.0",
     "nodemon": "^1.19.3"
   },
-  "homepage": "https://github.com/VictorMorenoJimenez/IV#readme",
   "devDependencies": {
-    "jasmine": "^3.5.0"
-  }
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.1"
+  },
+  "homepage": "https://github.com/VictorMorenoJimenez/IV#readme"
 }
