--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-languaje: node_js 
-node_js:
-        - "stable"
-cache:
-        directories:
-                - "node_modules"
+languaje: python
+python:
+        - "3.7"
+cache: pip3
+script: python3 --version
