Changed .travis.yml basic node configuration working on issue #17

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-languaje: python
-python:
-        - "3.7"
-cache: pip3
-script: python3 --version
+language: node_js
+node_js: 
+  - "stable"
+cache:
+  directories:
+    - "node_modules"
+
