--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js: 
   - "stable"
+  - "6"
+  - "8"
+  - "10"
+before_install:
+  - npm install .
 script:
   - npm test
 
