Added stop script in package.json npm stop closes #33

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app/app.js",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "stop": "pkill --signal SIGINT FreeDay"
   },
   "repository": {
     "type": "git",
