--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
