--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "config": "^1.31.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
     "mongoose": "^5.7.3",
-    "nodemon": "^1.19.3",
+    "saslprep": "^1.0.3",
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
