--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
   - "6"
   - "8"
   - "10"
+services: mongodb
+cache:
+  directories:
+    - "node_modules"
 before_install:
   - npm install .
 script:
