Added db creation on .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services: mongodb
 cache:
   directories:
     - "node_modules"
+before_script:
+  - mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});'
 before_install:
   - npm install .
 script:
