--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,24 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.10
+      - image: mongo:4.2.0
+        port: 27017:27017
+        environment:
+          - MONGODB_USERNAME: "iv"
+          - MONGODB_PASSWORD: "test"
     working_directory: ~/IV
     steps:
       - checkout
+      - run:
+        name: Database Setup
+        command: mongo --eval 'db.createUser({ user: "myrootuser", pwd: "mypassword", roles: [ { role: "userAdminAnyDatabase", db: "admin" } ] })
       - run:
           name: Install package json dependencies
           command: npm install .
       - run:
           name: Run test
           command: npm test
+      - save_cache:
+        key: dependency-cache-{{ checksum "package-lock.json" }}
+        paths:
+          - ./node_modules
