Trying conf for mongodb and CircleCI working on #39

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,7 @@ jobs:
     working_directory: ~/IV
     steps:
       - checkout
-      - run:
-          name: Database Setup
-          command: |
-          mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});
+      - run: mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});
       - run:
           name: Install package json dependencies
           command: npm install .
