--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.10
+      - image: circleci/mongo
         environment:
           - MONGODB_USERNAME: "iv"
           - MONGODB_PASSWORD: "test"
@@ -13,11 +14,7 @@ jobs:
       - run:
           name: "MongoDB"
           command: |
-            echo "deb http://repo.mongodb.org/apt/debian "$(lsb_release -sc)"/mongodb-org/4.0 main" | sudo tee /etc/apt/sources.list.d/mongodb.list
-            sudo apt-get update
-            sudo apt-get install mongodb-org
             mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});'
-            mongo mongodb://localhost:27017 --eval "rs.initiate()"
       - run:
           name: Install package json dependencies
           command: npm install .
