--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     docker:
       - image: circleci/node:12.10
       - image: circleci/mongo
+        -run:
+          command: mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});'
         environment:
           - MONGODB_USERNAME: "iv"
           - MONGODB_PASSWORD: "test"
