--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: node_js
-node_js: 
-  - "stable"
-  - "6"
-  - "8"
-  - "10"
-  - "12"
-services: mongodb
+services: docker
 cache:
   directories:
     - "node_modules"
-before_script:
-  - mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});'
+env:
+  - DOCKER_COMPOSE_VERSION=3.7
 before_install:
-  - npm install .
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker build -t node_app .
+  - docker-compose up
 script:
-  - npm test
-
+  npm test
