--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 sudo: required
-language: node_js
-services: docker
-cache:
-  directories:
-    - "node_modules"
+language: node
+services:
+  - docker
 env:
-  - DOCKER_COMPOSE_VERSION=1.24
+  DOCKER_COMPOSE_VERSION: 1.23.2
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - docker build -t node_app .
-  - docker-compose up
 
+before_script:
+  - docker-compose up -d --build
+  
 script:
   npm test
