--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,31 @@
-sudo: required
 language: node_js
-services:
-  - docker
+node_js: 
+  - "stable"
+  - "6"
+  - "8"
+  - "10"
+  - "12"
+services: docker
+cache:
+  directories:
+    - "node_modules"
 env:
-  DOCKER_COMPOSE_VERSION: 1.23.2
+  - DOCKER_COMPOSE_VERSION=3.7
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-
-before_script:
-  - docker-compose up -d --build
-  
+  - docker build -t node_app .
+  - docker-compose up
 script:
   npm test
+services: mongodb
+
+before_script:
+  - mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});'
+before_install:
+  - npm install .
+script:
+  - npm test
+
