--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1
     environment:
       - "discovery.type=single-node"
+    volumes:
+      - ./elasticsearch/data:/usr/share/elasticsearch/data
     expose:
       - "9200"
     ports:
