--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ jobs:
     docker:
       - image: circleci/node:12.10
       - image: circleci/mongo
+      - run:
+            command: |
+              echo "127.0.0.1  mongodb" >> /etc/hosts
     working_directory: ~/IV
     steps:
       - checkout
