--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
           command: npm install .
       - run:
           name: Add mongodb to localhost
-          command: echo "127.0.0.1  mongodb >> /etc/hosts"
+          command: |
+            echo "127.0.0.1  mongodb" >> /etc/hosts
       - run:
           name: Run test
           command: npm test
