--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - run:
           name: Add mongodb to localhost
           command: |
+            su root
             echo "127.0.0.1  mongodb" >> /etc/hosts
       - run:
           name: Run test
