Added root user to execute command on circleci config working on #45

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.10
+        user: root
       - image: circleci/mongo
     working_directory: ~/IV
     steps:
