--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ node_js:
   - "10"
   - "12"
 services: mongodb
+hosts:
+  - mongodb
 cache:
   directories:
     - "node_modules"
 before_script:
-  - sudo echo "127.0.0.1  mongodb" >> /etc/hosts
   - mongo FreeDay --eval 'db.createUser({user:"iv", pwd:"test", roles:["readWrite"]});'
 before_install:
   - npm install .
