Removed --no-daemon from pm2 proess manager

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "REST API to handle holidays around the world",
   "main": "app.js",
   "scripts": {
-    "start": "pm2 start --no-daemon app/app.js",
+    "start": "pm2 start app/app.js",
     "test": "mocha --exit",
-    "stop": "pm2 stop --no-daemon app/app.js",
-    "restart": "pm2 restart --no-daemon app/app.js"
+    "stop": "pm2 stop app/app.js",
+    "restart": "pm2 restart  app/app.js"
   },
   "repository": {
     "type": "git",
