--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST API to handle holidays around the world",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV='HEROKU' && node app/app.js",
+    "start": "node app/app.js",
     "test": "mocha --exit",
     "stop": "pm2 stop --no-daemon app/app.js",
     "restart": "pm2 restart --no-daemon app/app.js"
