--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 before_install:
   - npm install .
 script:
+  - git checkout package-lock.json
   - npm test
 deploy:
   provider: azure_web_apps
