--- a/vagrant-ansible/Vagrantfile
+++ b/vagrant-ansible/Vagrantfile
@@ -9,8 +9,6 @@ Vagrant.configure("2") do |config|
 
   config.vm.network "private_network", ip: "192.168.20.2"
 
-  config.vm.hostname = "freeday"
-
   config.vm.provider "virtualbox" do |vb|
    vb.memory = "2048"
    vb.cpus = 2
@@ -19,6 +17,10 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "provisioning/playbook.yml"
+    #ansible.inventory_path = "provisioning/inventory"
+    ansible.groups = {
+      "localvm" => ["default"] 
+    }
     ansible.verbose  = "vvv"
   end
   
