Added vagrant command to npm scripts closes #78

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "pm2 start app/app.js",
     "test": "mocha --exit",
     "stop": "pm2 stop app/app.js",
-    "restart": "pm2 restart app/app.js"
+    "restart": "pm2 restart app/app.js",
+    "vagrant": "cd vagrant-ansible && vagrant up"
   },
   "engines": {
     "node": ">=10.0.0",
